Definition_Files/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
  - host: webapp.test
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: myfrontend-svc
              port: 
                number: 80
  - host: api.webapp.test
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: mybackend-svc
              port:
                 number: 5000
